--- a/MDK-ARM/FOC_demo/FOC_demo.build_log.htm
+++ b/MDK-ARM/FOC_demo/FOC_demo.build_log.htm
@@ -22,14 +22,74 @@ Dialog DLL:      TCM.DLL V1.46.0.0
  
 <h2>Project:</h2>
 C:\Users\Administrator\Desktop\FOC_demo\MDK-ARM\FOC_demo.uvprojx
-Project File Date:  03/24/2025
+Project File Date:  03/26/2025
 
 <h2>Output:</h2>
 *** Using Compiler 'V6.14', folder: 'C:\Keil_v5\ARM\ARMCLANG\Bin'
-Build target 'FOC_demo'
+Rebuild target 'FOC_demo'
+assembling startup_stm32g473xx.s...
+compiling gpio.c...
 compiling main.c...
+compiling init.c...
+compiling adc.c...
+compiling stm32g4xx_hal_msp.c...
+compiling stm32g4xx_it.c...
+compiling usart.c...
+compiling stm32g4xx_hal_timebase_tim.c...
+compiling tim.c...
+compiling stm32g4xx_ll_adc.c...
+compiling stm32g4xx_hal_tim_ex.c...
+compiling stm32g4xx_hal_flash_ramfunc.c...
+compiling stm32g4xx_hal.c...
+compiling stm32g4xx_hal_gpio.c...
+compiling stm32g4xx_hal_flash.c...
+compiling stm32g4xx_hal_rcc.c...
+compiling stm32g4xx_hal_flash_ex.c...
+compiling stm32g4xx_hal_rcc_ex.c...
+compiling stm32g4xx_hal_adc_ex.c...
+compiling stm32g4xx_hal_adc.c...
+compiling stm32g4xx_hal_exti.c...
+compiling stm32g4xx_hal_dma_ex.c...
+compiling stm32g4xx_hal_pwr.c...
+compiling stm32g4xx_hal_dma.c...
+compiling stm32g4xx_hal_pwr_ex.c...
+compiling stm32g4xx_hal_tim.c...
+compiling stm32g4xx_hal_cortex.c...
+compiling system_stm32g4xx.c...
+compiling stm32g4xx_hal_uart_ex.c...
+compiling led_app.c...
+compiling svpwm_clarke_park.c...
+compiling arm_cos_f32.c...
+compiling foc_run.c...
+compiling msh_file.c...
+compiling arm_sin_f32.c...
+compiling msh_parse.c...
+compiling msh.c...
+compiling cmd.c...
+compiling shell.c...
+assembling context_rvds.S...
+compiling cpuport.c...
+compiling clock.c...
+compiling cpu.c...
+compiling components.c...
+compiling idle.c...
+compiling stm32g4xx_hal_uart.c...
+compiling irq.c...
+compiling ipc.c...
+compiling memheap.c...
+compiling mem.c...
+compiling mempool.c...
+compiling slab.c...
+compiling signal.c...
+compiling object.c...
+compiling scheduler.c...
+compiling thread.c...
+compiling kservice.c...
+compiling timer.c...
+compiling board.c...
+compiling arm_common_tables.c...
 linking...
-Program Size: Code=23768 RO-data=1748 RW-data=100 ZI-data=17804  
+Program Size: Code=34686 RO-data=3802 RW-data=104 ZI-data=18136  
 FromELF: creating hex file...
 "FOC_demo\FOC_demo.axf" - 0 Error(s), 0 Warning(s).
 
@@ -55,7 +115,7 @@ Package Vendor: Keil
 
    * Component: ARM::CMSIS:CORE:5.6.0
       Include file:  CMSIS\Core\Include\tz_context.h
-Build Time Elapsed:  00:00:01
+Build Time Elapsed:  00:00:02
 </pre>
 </body>
 </html>
